--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <h1>IchigoJamヘルパー</h1>
 
 <main id=main></main>
+<div id=help>※ IN2に明るさセンサーまたは距離センサーをつなぎ、OUT2にサーボモーターをつないだ場合</div>
 
 <script type="module">
 const conds = {
